Refactor CORS configuration to allow all origins and improve code readability